--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
     "svelte": "^3.55.1",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "crocks": "^0.12.4",
+    "dompurify": "^3.0.1",
+    "marked": "^4.3.0",
+    "ramda": "^0.28.0",
+    "robot3": "^0.4.0",
+    "svelte-robot-factory": "^2.0.5"
   }
 }
